--- a/install.html
+++ b/install.html
@@ -38,7 +38,7 @@ License: Creative Commons Attribution
             <ol>
                 <li> Install GCC 4.9 or higher version. </li>
                 <li> Install OpenMP 1.10. </li>
-                <li> Download <a href="mec.tar.gz">MEC</a> source code, and decompress it.</li>
+                <li> Download <a href="mec-1.0.9-alpha.tar.gz">MEC</a> source code, and decompress it.</li>
                 <li> Install MEC by type: </li>
                 <code> ./autogen.sh && ./configure && make</code>
             </ol>
